# PicoDeck-EDDiscovery

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build-all.cmd  setup-toolchain.cmd
.github/: release.yml
.github/workflows/: release.yml
PicoDeck-ED-Display/: CMakeLists.txt  README.md  build.cmd
PicoDeck-ED-Display/src/: board.h  dashboard.c  dashboard.h  edd_state.c  edd_state.h  font5x7.c  font5x7.h  lcd.c  lcd.h  main.c  net_usb.c  net_usb.h  tusb_config.h  usb_descriptors.c  websocket_client.c  websocket_client.h
PicoDeck-ED-Display/tools/: build.ps1  setup-toolchain.ps1
PicoDeck-ED-Keyboard/: .gitattributes  CMakeLists.txt  README.md  build.cmd
PicoDeck-ED-Keyboard/assets/: README.md  icons.c  icons.h
PicoDeck-ED-Keyboard/src/: board.h  buttons.c  buttons.h  edd_buttons.c  edd_buttons.h  font5x7.c  lcd.c  lcd.h  lwipopts.h  main.c  net_usb.c  net_usb.h  touch.c  touch.h  tusb_config.h  ui.c  ui.h  usb_descriptors.c  websocket_client.c  websocket_client.h
PicoDeck-ED-Keyboard/tools/: build.ps1  generate-icons.ps1
common/: README.md  eddjson_client.c  eddjson_client.h  lwipopts.h  net_usb.c  net_usb.h  picodeck_common.cmake  websocket_client.c  websocket_client.h
tools/: build-all-linux.sh  build-all.ps1  setup-toolchain-linux.sh  setup-toolchain.ps1
